--- a/overview/application.html
+++ b/overview/application.html
@@ -1,31 +1,53 @@
 
-<h2>${ $['overview.application'] }</h2>
 <div class="content">
   <template *exist="language == 'zhCN'">
-      <h3 class="question">什么是应用程序</h3>
-      <div class="answer">
-        <div>对dagger.js来说，您所创建的入口html文件就是应用程序本身。</div>
-        <div>dagger.js定义了一系列的<a href="module/introduction">模块</a>和<a href="directive/introduction">指令</a>。您可以根据需求在html文件的适当位置添加模块和指令声明，框架将在运行时解析这些声明并执行相应代码逻辑，从而为静态<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Learn/Getting_started_with_the_web/HTML_basics">超文本标记语言</a>增加动态响应能力。</div>
-        <div>所有的模块和指令声明都是非必选的。也就是说，一个普通的静态html页面同样是合法的dagger.js应用程序。</div>
+    <h2>概览 / 应用程序</h2>
+    <h3 class="question">什么是dagger.js应用程序</h3>
+    <div class="answer">
+      <div>对dagger.js来说，您所创建的入口html文件就是应用程序的载体。</div>
+      <div>dagger.js定义了一系列的<a href="module/introduction">模块</a>和<a href="directive/introduction">指令</a>。您可以根据需要在html文件的适当位置添加模块和指令声明，框架将在运行时解析这些声明并执行相应代码逻辑，从而为静态html增加动态响应能力。</div>
+      <div>所有的模块和指令声明都是非必选的。也就是说，一个普通的静态html页面同样是合法的dagger.js应用程序。</div>
+    </div>
+    <h3 class="question">应用程序示例</h3>
+    <div class="answer">下面窗口中展示的是一个dagger.js应用程序实例：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] Hello dagger!" src="https://codepen.io/dagger8224/embed/abqNQre?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/abqNQre">
+        [dagger-demo] Hello dagger!</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      <div>点击结果区域内的按钮将弹出字符串“Hello dagger!”。</div>
+      <div>您可以修改示例代码中“+load”指令等号右侧<a href="directive/expression">表达式</a>的内容，查看代码对程序结果的影响。</div>
+      <div>如示例所示，在dagger.js中，您可以使用<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Template_literals">模板字符串</a>语法（不需要在两端添加反引号）代替textContent来构建动态文本内容（随着数据变化响应更新）。在后文的示例中我们会频繁使用这种方式来打印示例执行结果。</div>
+      <div>示例代码演示了dagger.js的核心工作流程：
+        <div class="margin">div上的<a href="directive/lifeCycle">生命周期指令</a>“<a href="directive/load">+load</a>”构造出一个<a href="directive/scope">作用域</a>对象“$scope”。</div>
+        <div class="margin">按钮上的<a href="directive/eventHandler">事件处理指令</a>“+click”在用户点击时将此作用域下“message”字段的值展示在alert弹窗当中。</div>
       </div>
-      <h3 class="question">应用程序示例</h3>
-      <div class="answer">下面窗口中展示的是一个dagger.js应用程序实例：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] Hello dagger!" src="https://codepen.io/dagger8224/embed/abqNQre?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/abqNQre">
-          [dagger-demo] Hello dagger!</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-          on <a href="https://codepen.io">CodePen</a>.
-        </iframe>
-        <div>点击结果区域内的按钮将弹出字符串“Hello dagger!”。</div>
-        <div>您可以修改示例代码中“+load”指令等号右侧<a href="directive/expression">表达式</a>的内容，查看代码对程序结果的影响。</div>
-        <div>如示例所示，在dagger.js中，您可以使用<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Template_literals">模板字符串</a>语法（不需要在两端添加反引号）代替textContent来构建动态文本内容（随着数据变化响应更新）。在后文的示例中我们会频繁使用这种方式来打印示例执行结果。</div>
-        <div>示例代码演示了dagger.js的核心工作流程：
-          <div class="margin">div上的<a href="directive/lifeCycle">生命周期指令</a>“<a href="directive/load">+load</a>”构造出一个<a href="directive/scope">作用域</a>对象“$scope”。</div>
-          <div class="margin">按钮上的<a href="directive/eventHandler">事件处理指令</a>“+click”在用户点击时将此作用域下“message”字段的值展示在alert弹窗当中。</div>
-        </div>
-        <div>这是我们第一次接触指令和作用域的概念，现在不理解上述的工作流程请无需担心。在接下来的章节中，我们会对这些概念分别进行讲解。</div>
-      </div>
+      <div>这是我们第一次接触指令和作用域的概念，现在不理解上述的工作流程请无需担心。在接下来的章节中，我们会对这些概念分别进行讲解。</div>
     </div>
   </template>
   <template *exist="language == 'enUS'">
+    <h2>Overview / Application</h2>
+    <h3 class="question">What is a dagger.js application?</h3>
+    <div class="answer">
+      <div>In dagger.js, the entry html file is the application's carrier.</div>
+      <div>dagger.js defines a set of <a href="module/introduction">modules</a> and <a href="directive/introduction">directives</a>. You can add module and directive declarations to the appropriate positions in the html file, and the framework will parse and execute the corresponding code logic at runtime, enhancing the static html with dynamic response capabilities.</div>
+      <div>All module and directive declarations are optional. That is, a regular static html page is also a valid dagger.js application.</div>
+    </div>
+    <h3 class="question">Application Example</h3>
+    <div class="answer">Here is an example of a dagger.js application:
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] Hello dagger!" src="https://codepen.io/dagger8224/embed/abqNQre?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/abqNQre">
+        [dagger-demo] Hello dagger!</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      <div>Clicking on the button in the result area will display the string "Hello dagger!" in an alert box.</div>
+      <div>You can modify the content of the expression on the right side of the "+load" directive in the example code to see the impact on the program result.</div>
+      <div>As shown in the example, in dagger.js, you can use <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals">template literals</a> (without adding quotes at both ends) to build dynamic text content (which updates in response to data changes). We will frequently use this syntax to print the example execution results in the following examples.</div>
+      <div>The example code demonstrates the core working flow of dagger.js:
+        <div class="margin">The "<a href="directive/load">+load</a>" directive on the div constructs a <a href="directive/scope">scope</a> object "$scope".</div>
+        <div class="margin">The "+click" directive on the button handles user clicks and displays the value of the "message" field in an alert box.</div>
+      </div>
+      <div>These are the first times we encounter directives and scopes, so don't worry if you don't understand the above workflow. We will explain these concepts in the following chapters.</div>
+    </div>
   </template>
 </div>
