--- a/overview/installation.html
+++ b/overview/installation.html
@@ -75,7 +75,7 @@
   </div>
 </template>
 <template *exist="language == 'enUS'">
-  <h2>Overview / Install</h2>
+  <h2>Overview / Installation</h2>
   <div class="content">
     <h3 class="question">Version Information</h3>
     <div class="answer">
